Work work commit

--- a/index.html
+++ b/index.html
@@ -15,97 +15,110 @@
   <div class="container">
     <header class="general-header padding-site">
       <h1>Product name</h1>
-      <nav>
-
-        <ul>
-          <li>Put on this page information about your product</li>
-          <li>A detailed description of your product</li>
-          <li>Tell us about the advantages and merits</li>
-          <li>Associate the page with the payment system</li>
-        </ul>
-      </nav>
-      <figure class="header-img">
-        <img src="img/fon.jpg" alt="header-img">
-      </figure>
+      <div class="row">
+        <nav class="col-md-6">
+          <ul>
+            <li>Put on this page information about your product</li>
+            <li>A detailed description of your product</li>
+            <li>Tell us about the advantages and merits</li>
+            <li>Associate the page with the payment system</li>
+          </ul>
+        </nav>
+        <img src="img/fon.jpg" alt="header-img" class="header-img col-md-6">
+      </div>
     </header>
     <main>
       <section class="about-product padding-site">
         <h2>About your product</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
-        <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
-        <figure class="about-img">
-          <img src="img/fon.jpg" alt="about img">
-        </figure>
+        <div class="row">
+          <div class="col-md-6">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
+            <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+          </div>
+          <img src="img/fon.jpg" alt="about img" class="about-img col-md-6">
+        </div>
       </section>
       <section class="pluses padding-site clearfix">
         <h2>Dignity and pluses product</h2>
-        <ul>
-          <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
-          <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
-          <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
-          <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
-          <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
-          <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
-        </ul>
+        <div class="row">
+          <div class="li col-md-6">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus
+            inventore.</div>
+          <div class="li col-md-6">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus
+            inventore.</div>
+          <div class="li col-md-6">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus
+            inventore.</div>
+          <div class="li col-md-6">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus
+            inventore.</div>
+          <div class="li col-md-6">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus
+            inventore.</div>
+          <div class="li col-md-6">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus
+            inventore.</div>
+        </div>
       </section>
       <section class="scrinshots padding-site clearfix">
         <h2 class="scrin-h">Scrinshots</h2>
-        <article>
-          <img src="img/fon.jpg" alt="scrin-img">
-          <h2>The description for the image</h2>
-          <p class="scrin-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+        <div class="row">
 
-        </article>
-        <article>
-          <img src="img/fon.jpg" alt="scrin-img">
-          <h2>The description for the image</h2>
-          <p class="scrin-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+          <article class="col-md-6">
+            <img src="img/fon.jpg" alt="scrin-img">
+            <h2>The description for the image</h2>
+            <p class="scrin-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
 
-        </article>
-        <article>
-          <img src="img/fon.jpg" alt="scrin-img">
-          <h2>The description for the image</h2>
-          <p class="scrin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
-        </article>
-        <article>
-          <img src="img/fon.jpg" alt="scrin-img">
-          <h2>The description for the image</h2>
-          <p class="scrin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
-          </p>
+          </article>
+          <article class="col-md-6">
+            <img src="img/fon.jpg" alt="scrin-img">
+            <h2>The description for the image</h2>
+            <p class="scrin-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
 
-        </article>
+          </article>
+          <article class="col-md-6">
+            <img src="img/fon.jpg" alt="scrin-img">
+            <h2>The description for the image</h2>
+            <p class="scrin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
+          </article>
+          <article class="col-md-6">
+            <img src="img/fon.jpg" alt="scrin-img">
+            <h2>The description for the image</h2>
+            <p class="scrin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
+            </p>
+
+          </article>
+        </div>
       </section>
       <section class="reviews padding-site clearfix">
         <h2>Reviews</h2>
-        <div class="comment-box"><img src="img/fon.jpg" alt="img-comments">
-          <div class="reviews-text">
-            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
-              consectetur?
-            </p>
-            <span>Lourens S.</span>
+        <div class="row">
+
+          <div class="comment-box col-md-6"><img src="img/fon.jpg" alt="img-comments">
+            <div class="reviews-text">
+              <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
+                consectetur?
+              </p>
+              <span>Lourens S.</span>
+            </div>
           </div>
-        </div>
-        <div class="comment-box"><img src="img/fon.jpg" alt="img-comments">
-          <div class="reviews-text">
-            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
-              consectetur?</p>
-            <span>Lourens S.</span>
+          <div class="comment-box col-md-6"><img src="img/fon.jpg" alt="img-comments">
+            <div class="reviews-text">
+              <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
+                consectetur?</p>
+              <span>Lourens S.</span>
+            </div>
           </div>
-        </div>
-        <div class="comment-box"><img src="img/fon.jpg" alt="img-comments">
-          <div class="reviews-text">
-            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
-              consectetur?
-            </p>
-            <span>Lourens S.</span>
+          <div class="comment-box col-md-6"><img src="img/fon.jpg" alt="img-comments">
+            <div class="reviews-text">
+              <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
+                consectetur?
+              </p>
+              <span>Lourens S.</span>
+            </div>
           </div>
-        </div>
-        <div class="comment-box"><img src="img/fon.jpg" alt="img-comments">
-          <div class="reviews-text">
-            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
-              consectetur?
-            </p>
-            <span>Lourens S.</span>
+          <div class="comment-box col-md-6"><img src="img/fon.jpg" alt="img-comments">
+            <div class="reviews-text">
+              <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
+                consectetur?
+              </p>
+              <span>Lourens S.</span>
+            </div>
           </div>
         </div>
       </section>
