Last commit before lession #5 from lession #3

--- a/index.html
+++ b/index.html
@@ -182,26 +182,31 @@
     </main>
     <footer class="general-footer padding-site clearfix">
       <h2>Contacts</h2>
-      <form class="back-feed" action="index.html" method="post">
-        <input type="text" name="name" placeholder="Your name:">
-        <input type="email" name="email" value="" placeholder="Your email:">
-        <textarea name="message" rows="1" cols="1" placeholder="Your message:"></textarea>
-        <input type="button" name="send" value="send">
-      </form>
-      <div class="contact-me">
-        <ul>
-          <li><a class="contact" href="#">here_your_login_skype</a></li>
-          <li><a class="contact" href="#">279679659</a></li>
-          <li><a class="contact" href="#">psdhtmlcss@mail.ru</a></li>
-          <li><a class="contact" href="#">80 00 4568 55 55</a></li>
-        </ul>
-      </div>
-      <div class="social-me">
-        <a class="tweet" href="#"></a>
-        <a class="fb" href="#"></a>
-        <a class="in" href="#"></a>
-        <a class="gplus" href="#"></a>
-        <a class="yt" href="#"></a>
+      <div class="row">
+
+        <form class="back-feed col-md-7" action="index.html" method="post">
+          <input type="text" name="name" placeholder="Your name:">
+          <input type="email" name="email" value="" placeholder="Your email:">
+          <textarea name="message" rows="1" cols="1" placeholder="Your message:"></textarea>
+          <input type="button" name="send" value="send">
+        </form>
+        <div class="col-md-4">
+          <div class="contact-me">
+            <ul>
+              <li><a class="contact" href="#">here_your_login_skype</a></li>
+              <li><a class="contact" href="#">279679659</a></li>
+              <li><a class="contact" href="#">psdhtmlcss@mail.ru</a></li>
+              <li><a class="contact" href="#">80 00 4568 55 55</a></li>
+            </ul>
+          </div>
+          <div class="social-me">
+            <a class="tweet" href="#"></a>
+            <a class="fb" href="#"></a>
+            <a class="in" href="#"></a>
+            <a class="gplus" href="#"></a>
+            <a class="yt" href="#"></a>
+          </div>
+        </div>
       </div>
     </footer>
     <div class="copyright">
